--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   functions = "functions"
 [[redirects]]
-  from = "/api/*"
-  to = ".netlify/functions/invite"
+  from = "/api"
+  to = "/.netlify/functions/invite"
   status = 200
